Co-authored-by: Rune <Flustivs@users.noreply.github.com> Add initial project structure with AppDbContext, entity configurations, and necessary package references

--- a/api/Smart-trafic-controller-api/appsettings.Development.json
+++ b/api/Smart-trafic-controller-api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3306;Database=smart_traffic;User=traffic_user;Password=traffic_password;CharSet=utf8mb4;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
