Implement user management features with JWT authentication; add CreateUser and Login endpoints, user repository, and service layers. Remove unused files and update configuration settings.

--- a/api/Smart-trafic-controller-api/appsettings.Development.json
+++ b/api/Smart-trafic-controller-api/appsettings.Development.json
@@ -7,5 +7,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "JwtSettings": {
+    "Key": "This-is-my-very-long-random-secret-key-379",
+    "Issuer": "smart trafic controller api",
+    "Audience": "smart trafic controller api users",
+    "ExpiresMinutes": 15,
+    "RefreshTokenDays": 1
+  },
+  "AllowedHosts": "*"
 }
