Removes committed Mosquitto log and updates ignore rules
Prevents log files from being tracked by adding Mosquitto logs to ignore patterns.
Removes a previously committed log file to keep the repository clean.
Improves consistency in Docker Compose formatting but makes no functional changes to service configuration.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mariadb:
     build:
@@ -13,13 +11,23 @@ services:
       MYSQL_USER: traffic_user
       MYSQL_PASSWORD: traffic_password
     ports:
-      - "3306:3306"
+      - '3306:3306'
     volumes:
       - mariadb_data:/var/lib/mysql
     networks:
       - smart_traffic_network
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-prootpassword"]
+      test:
+        [
+          'CMD',
+          'mysqladmin',
+          'ping',
+          '-h',
+          'localhost',
+          '-u',
+          'root',
+          '-prootpassword',
+        ]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -28,8 +36,8 @@ services:
     image: eclipse-mosquitto
     container_name: mosquitto
     ports:
-      - "1883:1883"
-      - "9001:9001"
+      - '1883:1883'
+      - '9001:9001'
     volumes:
       - ./config:/mosquitto/config
       - ./data:/mosquitto/data
