--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -42,6 +42,8 @@ services:
       - ./config:/mosquitto/config
       - ./data:/mosquitto/data
       - ./log:/mosquitto/log
+    networks:
+      - mqttnet
 
 volumes:
   mariadb_data:
@@ -53,3 +55,5 @@ networks:
     ipam:
       config:
         - subnet: 172.20.0.0/16
+  mqttnet:
+    driver: bridge
