Refactors Arduino code for modularity and MQTT support
Improves maintainability by extracting configuration and traffic light logic into separate header files. Adds MQTT connectivity to enable remote control and status reporting of traffic lights. Updates pin assignments and sensor logic for clarity and reusability. Ignores Arduino config files in version control for security and convenience.

--- a/.gitignore
+++ b/.gitignore
@@ -243,5 +243,9 @@ Migrations
 # Production appsettings
 appsettings.json
 
+# Ignore mosquitto data files
 mosquitto.log
 mosquitto.db
+
+# Config file for ardunio
+arduino/config.h
