Refactor Docker setup and entrypoint script for API, adding migration handling and adjusting build context

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -46,8 +46,8 @@ services:
       - smart_traffic_network
   api:
     build:
-      context: ../api/Smart-trafic-controller-api
-      dockerfile: ../../docker/Dockerfile.api
+      context: ..
+      dockerfile: docker/Dockerfile.api
     container_name: smart_traffic_api
     working_dir: /app
     volumes:
