--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -12,5 +12,13 @@ RUN apt-get update && apt-get install -y unzip curl && rm -rf /var/lib/apt/lists
 
 EXPOSE 5010 5678
 
-# Run the API project inside /app (host mounts project into /app)
-CMD ["dotnet", "watch", "run", "--project", "Smart-trafic-controller-api.csproj", "--urls", "http://0.0.0.0:5010"]
+ENV PATH="$PATH:/root/.dotnet/tools"
+RUN dotnet tool install --global dotnet-ef --version 8.0.0
+
+# Copy and use an entrypoint script that runs migrations before starting the app.
+# The build context will include the repository root so we can copy the script from the
+# docker/ folder.
+COPY docker/api-entrypoint.sh /api-entrypoint.sh
+RUN chmod +x /api-entrypoint.sh
+
+ENTRYPOINT ["/api-entrypoint.sh"]
