--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -24,14 +24,14 @@ services:
           'ping',
           '-h',
           'localhost',
-          '-u',
-          'root',
+          '-uroot',
           '-prootpassword',
         ]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 30s
+
   mosquitto:
     image: eclipse-mosquitto
     container_name: mosquitto
@@ -44,17 +44,16 @@ services:
       - ./log:/mosquitto/log
     networks:
       - smart_traffic_network
+
   api:
     build:
       context: ..
       dockerfile: docker/Dockerfile.api
     container_name: smart_traffic_api
     working_dir: /app
-    volumes:
-      - ../api/Smart-trafic-controller-api:/app:cached
     ports:
-      - '5010:5010' # API port (host:container)
-      - '5678:5678' # Debug port
+      - '5010:5010'
+      - '5678:5678'
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - DOTNET_WATCH_RESTART_ON_RUDE_EDIT=1
@@ -65,6 +64,7 @@ services:
     depends_on:
       - mariadb
       - mosquitto
+
   frontend:
     build:
       context: ../frontend/SmartTraficControlSystem
@@ -74,19 +74,20 @@ services:
     volumes:
       - ../frontend/SmartTraficControlSystem:/app:cached
     ports:
-      - '5212:5212' # Frontend port (host:container)
-      - '5679:5678' # Debug port mapped to a different host port to avoid collision
+      - '5212:5212'
+      - '5679:5678'
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - DOTNET_WATCH_RESTART_ON_RUDE_EDIT=1
     networks:
       - smart_traffic_network
     restart: unless-stopped
+
   nginx:
     image: nginx
     ports:
-      - 80:80
-      - 443:443
+      - '80:80'
+      - '443:443'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     restart: unless-stopped
