Improves account registration UX and error handling
Enhances registration form with input bindings, loading state, and detailed error feedback.
Adds robust exception handling for network issues and timeouts in authentication service.
Configures API base URL via app settings and updates Docker compose to disable frontend container.
Prepares launch configuration for streamlined Blazor debugging.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -65,23 +65,23 @@ services:
       - mariadb
       - mosquitto
 
-  frontend:
-    build:
-      context: ../frontend/SmartTraficControlSystem
-      dockerfile: ../../docker/Dockerfile.frontend
-    container_name: smart_traffic_frontend
-    working_dir: /app
-    volumes:
-      - ../frontend/SmartTraficControlSystem:/app:cached
-    ports:
-      - '5212:5212'
-      - '5679:5678'
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - DOTNET_WATCH_RESTART_ON_RUDE_EDIT=1
-    networks:
-      - smart_traffic_network
-    restart: unless-stopped
+  # frontend:
+  #   build:
+  #     context: ../frontend/SmartTraficControlSystem
+  #     dockerfile: ../../docker/Dockerfile.frontend
+  #   container_name: smart_traffic_frontend
+  #   working_dir: /app
+  #   volumes:
+  #     - ../frontend/SmartTraficControlSystem:/app:cached
+  #   ports:
+  #     - '5212:5212'
+  #     - '5679:5678'
+  #   environment:
+  #     - ASPNETCORE_ENVIRONMENT=Development
+  #     - DOTNET_WATCH_RESTART_ON_RUDE_EDIT=1
+  #   networks:
+  #     - smart_traffic_network
+  #   restart: unless-stopped
 
   nginx:
     image: nginx
