Renamed "trafic" to "traffic" in the API

--- a/api/Smart-trafic-controller-api/.vscode/tasks.json
+++ b/api/Smart-trafic-controller-api/.vscode/tasks.json
@@ -5,7 +5,10 @@
       "label": "build",
       "command": "dotnet",
       "type": "process",
-      "args": ["build", "${workspaceFolder}/Smart-trafic-controller-api.csproj"],
+      "args": [
+        "build",
+        "${workspaceFolder}/Smart-traffic-controller-api.csproj"
+      ],
       "problemMatcher": "$msCompile"
     }
   ]
