--- a/api/Smart-trafic-controller-api/appsettings.Development.json
+++ b/api/Smart-trafic-controller-api/appsettings.Development.json
@@ -10,8 +10,8 @@
   },
   "JwtSettings": {
     "Key": "This-is-my-very-long-random-secret-key-379",
-    "Issuer": "smart trafic controller api",
-    "Audience": "smart trafic controller api users",
+    "Issuer": "smart traffic controller api",
+    "Audience": "smart traffic controller api users",
     "ExpiresMinutes": 15,
     "RefreshTokenDays": 1
   },
