Integrates MQTT for real-time traffic light updates
Adds MQTT support to enable live updates of traffic light status and average green light durations for vehicles and pedestrians.
Improves dashboard responsiveness by reflecting real-time changes from sensor data.
Switches UI stats from flow rates to green light durations for clearer traffic insights.

--- a/frontend/SmartTraficControlSystem/SmartTraficControlSystem.csproj
+++ b/frontend/SmartTraficControlSystem/SmartTraficControlSystem.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MQTTnet" Version="3.0.5" />
     <PackageReference Include="MudBlazor" Version="8.13.0" />
   </ItemGroup>
 
